src/test/resources/cocos/valid/imports/simple/Symbol Definition.sysml
package 'Symbol Definition' {
  block Vehicle;
  block Bus;
}