src/test/resources/cocos/invalid/imports/importAliasNecessary/Symbol Definition.sysml
package 'Symbol Definition' {
  block AlreadyInScope;
}